[gd_scene load_steps=8 format=3 uid="uid://nueoiniq1ast"]

[ext_resource type="Script" uid="uid://diwaekqpi1in8" path="res://Shrines/shrine.gd" id="1_1whm6"]
[ext_resource type="ArrayMesh" uid="uid://cq4tut8kmr7s2" path="res://Shrines/Column2.obj" id="1_m0ssg"]
[ext_resource type="AudioStream" uid="uid://cnnxpcssy7vl5" path="res://Shrines/Falling_Rock.ogg" id="3_5eayx"]
[ext_resource type="PackedScene" uid="uid://b86na5f6dvcoc" path="res://Shrines/treasure_spot.tscn" id="3_p42u8"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1whm6"]
size = Vector3(0.5, 1.2, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5eayx"]
albedo_color = Color(0.7303333, 0.5433192, 0.047119945, 1)
metallic = 0.6
roughness = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iqfy4"]
albedo_color = Color(0, 0, 0, 1)

[node name="Shrine" type="Node3D" groups=["Shrines"]]
script = ExtResource("1_1whm6")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_1whm6")

[node name="Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.4, 0, 0, 0, 0.3, 0, 0, 0, 0.4, 0, 0, 0)
mesh = ExtResource("1_m0ssg")
surface_material_override/0 = SubResource("StandardMaterial3D_5eayx")
surface_material_override/1 = SubResource("StandardMaterial3D_iqfy4")

[node name="CrumblingSFX" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_5eayx")
volume_db = -10.0

[node name="TreasureSpot" parent="." instance=ExtResource("3_p42u8")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)

[connection signal="item_changed" from="TreasureSpot" to="." method="_on_treasure_spot_item_changed"]
